--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
   "content_scripts": [
     {
       "matches": ["*://*/carrito/procesar_compra/*"],
-      "js": ["js/lib/jquery.js", "js/lib/jquery.colorbox-min.js", "js/contentScript.js"],
+      "js": ["js/lib/jquery.js", "js/contentScript.js"],
       "run_at": "document_start"
     }
   ],
