--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
     "128" : "icons/airplane_128.png"
   },
   "page_action": {
-    "default_icon": "icons/airplane_128.png"
+    "default_icon": "icons/airplane_128.png",
+    "default_popup": "html/popup.html"
   },
   "background": {
     "persistent": false,
